[gd_scene load_steps=7 format=2]

[ext_resource path="res://Themes/Style/bugtouch_theme.tres" type="Theme" id=1]
[ext_resource path="res://Themes/fonts/Pixelme.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=3]
[ext_resource path="res://Themes/Style/fantasy_forest_hiver.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[node name="Options" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
window_mode_button_path = NodePath("OptionsContainer/Video/VideoContainer/VBoxContainer/OptionButton")
music_button_path = NodePath("OptionsContainer/Video/VideoContainer/VBoxContainer/OptionButton2")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -499.0
margin_top = -251.0
margin_bottom = 251.0
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 492.0
margin_bottom = 495.0
theme = ExtResource( 1 )
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 477.0
margin_bottom = 480.0
mouse_filter = 0
theme = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 469.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="ActionsList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 469.0
mouse_filter = 0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="Titre" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="seperator" type="Control" parent="Titre"]
margin_right = 1280.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Titre"]
margin_top = 30.0
margin_right = 1280.0
margin_bottom = 101.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 2
uppercase = true

[node name="OptionsContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -173.5
margin_right = 545.0
margin_bottom = 173.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Video" type="Control" parent="OptionsContainer"]
margin_right = 545.0
margin_bottom = 171.0
size_flags_vertical = 3

[node name="VideoContainer" type="HBoxContainer" parent="OptionsContainer/Video"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -212.0
margin_right = 212.0
margin_bottom = 179.0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/Video/VideoContainer"]
margin_right = 424.0
margin_bottom = 179.0
size_flags_horizontal = 3

[node name="OptionButton2" type="OptionButton" parent="OptionsContainer/Video/VideoContainer/VBoxContainer"]
margin_right = 424.0
margin_bottom = 87.0
size_flags_horizontal = 11
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Musique 1"
items = [ "Musique 1", null, false, 0, null, "Musique 2", null, false, 1, null ]
selected = 0

[node name="OptionButton" type="OptionButton" parent="OptionsContainer/Video/VideoContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 424.0
margin_bottom = 179.0
size_flags_horizontal = 7
size_flags_vertical = 7
theme = ExtResource( 1 )
text = "Fenetre"
items = [ "Fenetre", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="Audio" type="Control" parent="OptionsContainer"]
margin_top = 175.0
margin_right = 545.0
margin_bottom = 347.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioContainer" type="HBoxContainer" parent="OptionsContainer/Audio"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -475.0
margin_top = -53.0
margin_bottom = 53.0

[node name="Labels" type="VBoxContainer" parent="OptionsContainer/Audio/AudioContainer"]
margin_right = 325.0
margin_bottom = 106.0
alignment = 1

[node name="Master" type="Label" parent="OptionsContainer/Audio/AudioContainer/Labels"]
margin_right = 325.0
margin_bottom = 51.0
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "Son principal"

[node name="Musique" type="Label" parent="OptionsContainer/Audio/AudioContainer/Labels"]
margin_top = 55.0
margin_right = 325.0
margin_bottom = 106.0
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "Musique"

[node name="Master" type="HSlider" parent="OptionsContainer/Audio"]
margin_left = 399.0
margin_top = 32.0
margin_right = 545.0
margin_bottom = 48.0
rect_scale = Vector2( 2.5, 3 )
theme = SubResource( 2 )
min_value = -50.0
max_value = 0.0
value = -45.0
rounded = true

[node name="Music" type="HSlider" parent="OptionsContainer/Audio"]
margin_left = 399.0
margin_top = 89.0
margin_right = 545.0
margin_bottom = 105.0
rect_scale = Vector2( 2.5, 3 )
min_value = -50.0
max_value = 0.0
value = -45.0
rounded = true

[node name="RetourFromOptions" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -153.5
margin_top = -92.0
margin_right = 153.5
theme = ExtResource( 1 )
text = "Retour"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[connection signal="item_selected" from="OptionsContainer/Video/VideoContainer/VBoxContainer/OptionButton2" to="." method="_on_OptionButton2_item_selected"]
[connection signal="item_selected" from="OptionsContainer/Video/VideoContainer/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="OptionsContainer/Audio/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="OptionsContainer/Audio/Music" to="." method="_on_Music_value_changed"]
[connection signal="pressed" from="RetourFromOptions" to="." method="_on_RetourFromOptions_pressed"]
